test/asm/empty-raw-identifier.err
error: empty-raw-identifier.asm(5) -> empty-raw-identifier.asm::macro(3):
    Invalid character in bracketed macro argument '?'
error: empty-raw-identifier.asm(5) -> empty-raw-identifier.asm::macro(3):
    Empty raw symbol in bracketed macro argument
Assembly aborted with 2 errors!
