test/asm/empty-raw-identifier.asm
MACRO #macro
	println "all args: \#"
	println "bad args: \<?>, \<#>"
ENDM
	#macro a, #b, c, 1, #2, 3
